# arx

./: Cargo.toml  Dockerfile  README.md  justfile
src/: authentication.rs  config.rs  gateway.rs  headers.rs  http_client.rs  hyper.rs  lib.rs  main.rs  reverse_proxy.rs  route.rs  static_routes.rs
src/k8s/: k8s_routing.rs  k8s_util.rs  mod.rs
src/layers/: http_compression.rs  mod.rs
src/local/: health.rs  mod.rs
